# cosmic-arcade

./: Containerfile  Justfile  README.md
.github/workflows/: build.yml
arcade-cli/: Cargo.toml
arcade-cli/src/: bing.rs  cli.rs  config.rs  cosmic.rs  main.rs
arcade-cli/src/commands/: background.rs
build_files/: build.sh
system_files/etc/skel/: .zshrc
system_files/usr/lib/systemd/user/: arcade-background.service  arcade-background.timer
