[package]
name = "arcade-cli"
version = "0.1.0"
edition = "2021"
description = "Cosmic Arcade configuration CLI"
license = "MIT"

[[bin]]
name = "arcade-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
